cpu: Also consider "temp1" and "temp2" for AMD temperature sensors

Apparently some older CPUs/kernels report Tctl and/or Tdie as "temp1/2"
so also check those names. In addition, be a little more verbose if we
encounter something that doesn't match what we expect.

BUG: 452763